PR/47861: Fredrik Pettai: keep track of the address family for each socket opened and don't send the a message to the wrong family type.