usr.sbin/syslogd/syslogd.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: syslogd.c,v 1.114 2013/01/17 18:54:28 christos Exp $	*/
+/*	$NetBSD: syslogd.c,v 1.115 2013/05/27 23:15:51 christos Exp $	*/
 
 /*
  * Copyright (c) 1983, 1988, 1993, 1994
@@ -39,7 +39,7 @@ __COPYRIGHT("@(#) Copyright (c) 1983, 1988, 1993, 1994\
 #if 0
 static char sccsid[] = "@(#)syslogd.c	8.3 (Berkeley) 4/4/94";
 #else
-__RCSID("$NetBSD: syslogd.c,v 1.114 2013/01/17 18:54:28 christos Exp $");
+__RCSID("$NetBSD: syslogd.c,v 1.115 2013/05/27 23:15:51 christos Exp $");
 #endif
 #endif /* not lint */
 
@@ -2496,6 +2496,8 @@ udp_send(struct filed *f, char *line, size_t len)
 	for (r = f->f_un.f_forw.f_addr; r; r = r->ai_next) {
 		retry = 0;
 		for (j = 0; j < finet->fd; j++) {
+			if (finet[j+1].af != r->ai_family)
+				continue;
 sendagain:
 			lsent = sendto(finet[j+1].fd, line, len, 0,
 			    r->ai_addr, r->ai_addrlen);
@@ -3994,6 +3996,7 @@ socksetup(int af, const char *hostname)
 			logerror("socket() failed");
 			continue;
 		}
+		s->af = r->ai_family;
 		if (r->ai_family == AF_INET6 && setsockopt(s->fd, IPPROTO_IPV6,
 		    IPV6_V6ONLY, &on, sizeof(on)) < 0) {
 			logerror("setsockopt(IPV6_V6ONLY) failed");
